--- a/assets/languages/english.json
+++ b/assets/languages/english.json
@@ -63,5 +63,6 @@
         "successMessage":"Query Posted successfully"
     },
     "followUs":"Follow Us",
-    "footer":"© 2017 TRYP Hotels Worldwide, Inc. All rights reserved. Privacy Notice Web Services User Agreement"
+    "footer":"© 2017 TRYP Hotels Worldwide, Inc. All rights reserved. Privacy Notice Web Services User Agreement",
+    "gallery":"GALLERY"
 }
