--- a/assets/languages/english.json
+++ b/assets/languages/english.json
@@ -6,22 +6,22 @@
     "rewards":"REWARDS",
     "bookNow":"BOOK NOW",
     "slider":{
-        "heading1":"WORLDLY AVENTURES <br />AWAIT",
-        "paragraph1":"EXPLORE OUR HOTELS IN OVER 75 CITIES AROUNT THE GLOBE",
-        "heading2":"",
+        "heading1":"#ThisIsMyTRYP",
+        "paragraph1":"",
+        "heading2":"#OwnTheCity",
         "paragraph2":"",
-        "heading3":"",
+        "heading3":"ALWAYS READY FOR BUSINESS",
         "paragraph3":"",
-        "heading4":"",
+        "heading4":"LIVE THE CULTURE",
         "paragraph4":""
     },
     "aboutUs":{
         "heading1":"OUR HOTEL",
         "hashtag1":"#EsteEsMiTYRP",
-        "paragraph1":"Experience comfort and convenience in Mexico City at our TRYP hotel perfectly located near the World Trade Center. Enjoy breathtaking city views from our top-floor restaurant or explore the local streets and discover the best of authentic local foods. Our location near Mexico City International Airport, combined with our elegant and flexible meeting space, makes us the best choice in Mexico City hotels for business trips.<br/>It's time to take over the city!",
+        "paragraph1":"Experience comfort and convenience in Mexico City at our TRYP hotel strategically located near the World Trade Center. Enjoy breathtaking city views from our top-floor restaurant or explore the local streets and discover the best of authentic local foods. Our location near Mexico City International Airport, combined with our elegant and flexible meeting space, makes us the best choice in Mexico City hotels for business trips.<br />It's time to take over the city!",
         "heading2":"OUR CULTURE",
         "hashtag2":"#ExperienciaTRYP",
-        "paragraph2":"Our passion for our guests only is comparable to our passion for the city. We invite you to explore and discover the best that México has to offer. Our local and up-to-date partners will advise you on the most authentic experiences available: From great local cuisine to fabulous nights in the city. We want you to drink, eat, rest and have Wi-Fi."
+        "paragraph2":"Our passion for our guests only is comparable to our passion for the city. We invite you to explore and discover the best that México City has to offer. Our local partners daily will advise you on the most authentic experiences available: From great local cuisine to fabulous nights in the city. We want you to drink, eat, rest and have Wi-Fi."
     },
     "rooms":{
         "heading":"ROOMS",
@@ -44,14 +44,15 @@
         "h2":"HAVE SUCCESS",
         "h3":"BE HAPPY",
         "p1":"In TRYP hotel we are so passionate about making sure your event or meeting is perfect, like the city itself. From a meeting to a formal event, we offer you not only a central location, but also everything you need for you and your company to offer a fantastic experience.",
-        "p2":"When it comes to meetings, we all want to contribute to creating the perfect working environment. Our meeting rooms are specifically designed to increase productivity and maintain a relaxed atmosphere. When you stay with us, the hotel will not only serve as the headquarters of your company, but our staff will be your most faithful temporary workforce. We also offer the best coffee breaks, which will leave a good taste in your mouth.",
-        "p3":"Whatever the event, an intimate wedding, a meeting or a great celebration, we take care of every detail so that you focus on enjoying your guests and your event. Our incredible chefs can prepare truly impressive and imaginative creations. We have developed an important range of menus that will conquer the most demanding palates, including children's menus and vegetarian dishes. Given the category of our standards, we can provide you with one option after another, but ultimately it is your day and everything should be to your liking ... the imagination will be your only limit. We simply give life to your imagination."
+        "p2":"Our meeting rooms are specifically designed to increase productivity and maintain a relaxed atmosphere. We also offer the best coffee breaks, which will leave a great taste in your mouth.",
+        "p3":"Whatever the event, we take care of every detail so that you focus on enjoying your guests and your event. Our incredible chefs can prepare truly impressive creations.  We simply give life to your imagination.",
+        "generalpara":"<p>Book now our facilities for your next meeting or event.<br />Too easy!</p><p>Send us an email at <b>reservaciones@trypmexicowtc.com</b> or call us at <b>01- (55) -6644-5600.</b></p>"
     },
     "rewardsInfo":{
         "heading":"YOUR REWARDS",
         "paragraph":"<p>TRYP by Wyndham hotels offer you a first class experience and a fabulous time. But that's not enough: we want to give you more.</p><p>TRYP by Wyndham Hotels are part of the Wyndham Rewards®, a free-membership travel loyalty program sponsored by the Wyndham Hotel Group. As a member of Wyndham Rewards, you can earn points or air miles on all qualifying stays at more than 7800 hotels in 15 different locations around the world.</p><p>Wyndham Rewards is a simple program<br />We think everyone deserves a prize. That is why we facilitate obtaining points and your exchange for that special trip you have always wanted. Go ahead, you've earned them.</p>",
         "heading2":"What are you waiting?",
-        "paragraph2":"Register for free at <a href='www.wyndhamrewards.com'>www.wyndhamrewards.com today.</a>"
+        "paragraph2":"Register for free at www.wyndhamrewards.com today."
     },
     "book":{
         "heading":"BOOK NOW",
@@ -60,9 +61,17 @@
         "email":"E-Mail",
         "dayOfVisit":"Day Of Visit",
         "submit":"Submit",
-        "successMessage":"Query Posted successfully"
+        "successMessage":"Query Posted successfully",
+        "children":"Children",
+        "adults":"Adults",
+        "numberOfRooms": "Number Of Rooms",
+        "lastName": "Last Name"
     },
     "followUs":"Follow Us",
     "footer":"© 2017 TRYP Hotels Worldwide, Inc. All rights reserved. Privacy Notice Web Services User Agreement",
-    "gallery":"GALLERY"
+    "gallery":"GALLERY",
+    "devi":{
+        "heading":"DEVI SKY BAR",
+        "paragraph":"Located on the top floor where you can delight your palate with a delicious menu of the day, craft beer with friends, a romantic dinner in the light of the moon. Enjoy live broadcasts of the best events, seasonal sports transmissions and lots of entertainment while contemplating our incomparable view of Mexico City."
+    }
 }
