--- a/assets/languages/espaniol.json
+++ b/assets/languages/espaniol.json
@@ -6,13 +6,13 @@
     "rewards":"RECOMPENSAS",
     "bookNow":"RESERVA AHORA",
     "slider":{
-        "heading1":"#EsteEsMiTRYP",
+        "heading1":"<span class='split1'>#</span><span class='split2'>Este</span><span class='split3'>EsMi</span><span class='split4'>TRYP</span>",
         "paragraph1":"",
-        "heading2":"#LaCiudadTePertenece",
+        "heading2":"#La<span class='split6'>Ciudad</span>TePertenece",
         "paragraph2":"",
-        "heading3":"SIEMPRE LISTOS PARA LOS NEGOCIOS",
+        "heading3":"SIEMPRE LISTOS<br />PARA<br /> LOS NEGOCIOS",
         "paragraph3":"",
-        "heading4":"EMPÁPATE DE CULTURA",
+        "heading4":"EMPÁPATE<br /> DE<br /> CULTURA",
         "paragraph4":""
     },
     "aboutUs":{
